SIMEN ADDED AN S

--- a/Dag1-begreperFilosofi/6-Diskusjon.ipynb
+++ b/Dag1-begreperFilosofi/6-Diskusjon.ipynb
@@ -2,19 +2,31 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b26fcb6e",
+   "id": "600689ff",
    "metadata": {},
    "source": [
     "## Muligheter for diskusjon:\n",
     "- Alternative IDEer? Arne?\n",
+    "    - Testes ut, hvilken kjerne kjøres de på?\n",
     "- Hvorfor jobbe i Dapla versus Prodsonen, eller motsatt?\n",
+    "    - Systemer og det som ligger rundt\n",
+    "    - Trygghet?\n",
+    "    - Dapla \"nærmere overflaten\", lettere tilgang.\n",
+    "    - APIer til KLASS og Statbank på Dapla\n",
+    "    - Dapla skal mot dapla?\n",
+    "    - Utfordringer med å få data til dapla?\n",
+    "    - Lite forskjeller rent programmeringsmessig\n",
+    "    - Delvis ulik seleksjon av pakker, blir mer samkjørt?\n",
+    "    - \"Flere pakker\" i prodsonen?\n",
+    "    - Litt vanskeligere i prodsonen med pakker som skal \"snakke med omverdenen\"\n",
+    "    - Kundeservice support på prodsonen, mens \"dapla-teamet\" på dapla\n",
     "- Hvilke \"kompetanser\" er det vi bygger?\n",
     "- Ønsker for dag2 / dag3"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "40d5cdaf",
+   "id": "3912fcc3",
    "metadata": {},
    "source": [
     "### Hva ønsker dere å se gjort i Python?\n",
@@ -28,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71172e29",
+   "id": "88f6f958",
    "metadata": {},
    "source": [
     "### Hvilke typer prosjekt og data skal dere jobbe på?\n",
@@ -37,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dda47f6f",
+   "id": "c2d9d363",
    "metadata": {},
    "source": [
     "### Bruker vi samme begreper om de samme prosessene?\n",
@@ -46,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38555cfa",
+   "id": "f2b8422b",
    "metadata": {},
    "source": [
     "### Lekser? \n",
@@ -58,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1baf0033",
+   "id": "540d46a7",
    "metadata": {},
    "outputs": [],
    "source": []
