--- a/Dag2-miljo/7-oppsummering.ipynb
+++ b/Dag2-miljo/7-oppsummering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3c8dd9d7",
+   "id": "304656d9",
    "metadata": {},
    "source": [
     "## Muligheter for diskusjon:\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97fd7b08",
+   "id": "24e53715",
    "metadata": {},
    "source": [
     "### Lekser? \n",
@@ -26,9 +26,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "47cdb62e",
+   "metadata": {},
+   "source": [
+    "### Bonusmulighet:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2aaed641",
+   "id": "0062e5f7",
    "metadata": {},
    "outputs": [],
    "source": []
