--- a/Dag2-miljo/2-KoderessurserGithub.ipynb
+++ b/Dag2-miljo/2-KoderessurserGithub.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c74d0a35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Hvorfor bruke "
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "f76ae997",
+   "id": "b3395b80",
    "metadata": {},
    "source": [
     "# Viktig å finne \"rett kode\" å lese for å lære\n",
@@ -11,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e8e7d8b",
+   "id": "5d127eae",
    "metadata": {},
    "source": [
     "### Helt-python"
@@ -20,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c69b2fed",
+   "id": "0cf02066",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d458688e",
+   "id": "1a20adc3",
    "metadata": {},
    "source": [
     "### Idea-repository"
@@ -55,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec1d9374",
+   "id": "2f3c0acb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1667583d",
+   "id": "faf7c1ab",
    "metadata": {},
    "source": [
     "### Dapla-veileder "
@@ -74,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ea40b42",
+   "id": "a4ecd4ff",
    "metadata": {},
    "outputs": [],
    "source": [
