--- a/Dag2-miljo/7-oppsummering.ipynb
+++ b/Dag2-miljo/7-oppsummering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "304656d9",
+   "id": "b2a84f9c",
    "metadata": {},
    "source": [
     "## Muligheter for diskusjon:\n",
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24e53715",
+   "id": "5f905bd7",
    "metadata": {},
    "source": [
     "### Lekser? \n",
@@ -27,19 +27,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47cdb62e",
+   "id": "a6077f33",
    "metadata": {},
    "source": [
     "### Bonusmulighet:"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0062e5f7",
+   "cell_type": "markdown",
+   "id": "c0f2f0db",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Git GUI i RStudio? Vise at det er de samme \"begrepene\"."
+   ]
   }
  ],
  "metadata": {
