--- a/Dag2-miljo/_Dagsplan_miljo.ipynb
+++ b/Dag2-miljo/_Dagsplan_miljo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f285e8fb",
+   "id": "9c9f3fcb",
    "metadata": {},
    "source": [
     "# Dag2 - \"Miljø\""
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6468513a",
+   "id": "cba94e13",
    "metadata": {},
    "source": [
     "1. Orientering i Jupyter notebooks, kernels, code & markdown, shortcuts & autocomplete\n",
@@ -22,12 +22,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ec8807d",
+   "cell_type": "markdown",
+   "id": "ac3fc106",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Forventer litt mer tilbakemeldinger fra kursdeltagere i dag.\n",
+    "Vi trenger dette for å vite at vi ikke går for tregt / raskt frem. \\\n",
+    "Kurset er ment for å hjelpe dere med EDX-kurset, og det blir enklere for oss om vi vet hva dere trenger, eller hvor dere sitter fast.\n",
+    "\n",
+    "Er det greit at vi spør folk direkte? Si fra om du ikke har mikrofon. \\\n",
+    "Om det er ubehagelig å ta spørsmålene dine foran folk, vil vi gjerne ha det på chat eller mail før dag3 (tirsdag)."
+   ]
   }
  ],
  "metadata": {
