--- a/Dag2-miljo/0-RepitisjonIndexing.ipynb
+++ b/Dag2-miljo/0-RepitisjonIndexing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0779baf7",
+   "id": "f1402037",
    "metadata": {},
    "source": [
     "### Ønske om repetisjon fra Kristian: \"Indexing\""
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb1c27a2",
+   "id": "11cf44e6",
    "metadata": {},
    "source": [
     "Det følgende er kopiert ut av \"Begreper-arket\" fra Dag1, med noen endringer"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "32aa3d49",
+   "id": "b6f3b6cc",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "be4c1376",
+   "id": "252acece",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "0c629238",
+   "id": "ed8c11ad",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feb7b213",
+   "id": "42cc9348",
    "metadata": {},
    "source": [
     "##### Indexing i lister med tall - \"indecies\"\n",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "73584090",
+   "id": "feabe648",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "1cf5d578",
+   "id": "52f24b05",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "e8b28b55",
+   "id": "076d053f",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ccd5d1e",
+   "id": "7817fc67",
    "metadata": {},
    "source": [
     "### \"Slicing\"\n",
@@ -164,7 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "41fc7e91",
+   "id": "2865f55e",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "7f15c42f",
+   "id": "fa88741e",
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "b0c151c5",
+   "id": "0efa1ff5",
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e737e8d",
+   "id": "a5ab221e",
    "metadata": {},
    "source": [
     "##### \"Step\"\n",
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "b46cc235",
+   "id": "d1ac1645",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "2fa45f13",
+   "id": "a1cab8f1",
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,105 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3457a326",
+   "id": "4f014ae7",
+   "metadata": {},
+   "source": [
+    "### Index innover i \"nested\" iterables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e2524a27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[5, '\\nok', 7.0], ['En', 'To', 'Tre', 'Fire', 'Fem', 'Seks', 'Sju']]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Kombiner listene våre inn i en ny liste\n",
+    "g = [e, f]\n",
+    "g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "f1327ae1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, '\\nok', 7.0]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dette er da en liste med to lister, vi kan hente den første listen i listen med å indexe inn:\n",
+    "g[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "01f5c6f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nok'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Og indexe inn i denne listen igjen, til dens elementer\n",
+    "g[0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "cd95bcb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'k'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Bonus: Strings kan også indexes i... \n",
+    "# Her siste bokstaven i andre element av den første listen:\n",
+    "g[0][1][-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8aecf1e8",
    "metadata": {},
    "source": [
     "### Dicts har \"keys\""
@@ -291,8 +389,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "37946439",
+   "execution_count": 49,
+   "id": "a66a5907",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,8 +403,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "id": "8fdeebba",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-50-cde7201ad4b2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mh\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 0"
+     ]
+    }
+   ],
+   "source": [
+    "# Hva skjer når vi prøver å indexe som i lists?\n",
+    "h[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
-   "id": "599b25f4",
+   "id": "a1334495",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6684cab1",
+   "id": "86347094",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "a7bc0cb2",
+   "id": "10a92cff",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "4cc05db5",
+   "id": "ba893477",
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e73d30a7",
+   "id": "853fa7e4",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "743627aa",
+   "id": "ea162b22",
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c507003",
+   "id": "939d1f2e",
    "metadata": {},
    "source": [
     "##### Bonus: implisitt tuple-unpacking"
@@ -444,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9cdeef63",
+   "id": "06bf90c8",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "752f1b6b",
+   "id": "edd58b28",
    "metadata": {},
    "outputs": [],
    "source": []
