--- a/Dag3-pandas/3-Kolonnehandtering.ipynb
+++ b/Dag3-pandas/3-Kolonnehandtering.ipynb
@@ -1,9 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2443361d",
+   "metadata": {},
+   "source": [
+    "### \"Keep\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "420ca5e3",
+   "metadata": {},
+   "source": [
+    "### \"Drop\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86a10ad4",
+   "id": "b976de6e",
    "metadata": {},
    "outputs": [],
    "source": []
