--- a/Dag3-pandas/_Dagsplan_Pandas.ipynb
+++ b/Dag3-pandas/_Dagsplan_Pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "47642ecf",
+   "id": "777d3f5f",
    "metadata": {},
    "source": [
     "# Pandas og operasjoner"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06d07773",
+   "id": "54e69b0d",
    "metadata": {},
    "source": [
     "- “kobling”\n",
@@ -22,12 +22,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "960ac59e",
+   "metadata": {},
+   "source": [
+    "### Repetisjon: \"Når bruker vi lists og dicts?\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af522ebf",
+   "id": "51970b18",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "# Forskjellen på å indexe på en string og en list av strings i pandas\n",
+    "df = pd.read_csv('../data/mock_sysselsatte/companies_2019_30000.csv')\n",
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1438801e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dette gir oss en \"series\", vi indexerer kun på en string\n",
+    "df['nace']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fd73b17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dette gir oss en dataframe med én kolonne, vi indexerer med en list.\n",
+    "df[['nace']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "220dd384",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# En nyttig dict, \"key : value\"\n",
+    "omkoding = {\n",
+    "    'Unnamed: 0' : 'slett', \n",
+    "    'work_id' : 'Arbeidssted', \n",
+    "    'nace' : 'Næringskode', \n",
+    "    'region_code' : 'RegionsKode', \n",
+    "    'region' : 'RegionID',\n",
+    "    'employee_points' : 'Ansatte'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcc57c7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Døp om kolonnene\n",
+    "df.rename(columns = omkoding)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29bf242b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Skrev vi over nå?\n",
+    "df\n",
+    "# Nei, rename() er ikke \"inplace\" / \"copy\""
+   ]
   }
  ],
  "metadata": {
