--- a/Dag3-pandas/6-Kryssing.ipynb
+++ b/Dag3-pandas/6-Kryssing.ipynb
@@ -1,8 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f1d659f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "pop = pd.read_csv('../data/mock_sysselsatte/population_2019_30000.csv')\n",
+    "comp = pd.read_csv('../data/mock_sysselsatte/companies_2019_30000.csv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "88a79e28",
+   "id": "9572f4f2",
    "metadata": {},
    "source": [
     "### Crosstab"
@@ -10,29 +23,73 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0a07752",
+   "id": "6c1da908",
    "metadata": {},
    "source": [
     "https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.crosstab.html"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "cbe976d5",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3e655ea",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Oppstart av Carl på en \"PROC FREQ\"-analog\n",
-    "https://statisticsnorway.github.io/ssb_fellesfunksjoner_360/proc.html \\\n",
-    "https://github.com/statisticsnorway/ssb_fellesfunksjoner_360/blob/Merge-nbdev-template/04_proc.ipynb"
+    "pop"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b345edb0",
+   "id": "4ab94dc8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Antall kvinner og menn per alder\n",
+    "pd.crosstab(pop['age'], pop['sex'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7aaf22c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gjennomsnittlig arbeidsprosent per kjønn og tiår\n",
+    "arbprc_ald_kjonn = pd.crosstab(pop['age'].astype(str).str[:1].replace('', '0'), \n",
+    "            pop['sex'], \n",
+    "            values = pop['work_percent'].astype(float), \n",
+    "            aggfunc = np.mean)\n",
+    "# Dataframes har en \"round funksjon\"...\n",
+    "arbprc_ald_kjonn.round()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1be71d14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eller man kan bare konvertere til int?\n",
+    "arbprc_ald_kjonn.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b00aa53b",
+   "metadata": {},
+   "source": [
+    "### Bonus: \"En påbegynt versjon av Proc Freq\"\n",
+    "\n",
+    "https://statisticsnorway.github.io/ssb_fellesfunksjoner_360/proc.html \\\n",
+    "https://github.com/statisticsnorway/ssb_fellesfunksjoner_360/blob/Merge-nbdev-template/04_proc.ipynb\n",
+    "\n",
+    "Lignende prosjekt er meldt inn av Kristian Lønø til Hack, for \"proc tabulate\" \\\n",
+    "Denne pakken \"fellesfunksjoner_360\" er dokumentert og pakket ned til en \"package\" med \"nbdev\" - \"Notebook development\"."
+   ]
   }
  ],
  "metadata": {
